# go-randomx

./: .gitignore  ARCHITECTURE.md  ARGON2D_IMPLEMENTATION_GUIDE.md  ARGON2D_ISSUE.md  ARGON2D_VALIDATION_REPORT.md  AUDIT.md  CONTRIBUTING.md  DAY2_COMPLETION_REPORT.md  DEBUGGING_SESSION_OCT15.md  DEBUG_TRACING_GUIDE.md  GAP_ANALYSIS_COMPLETION_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_DELIVERABLE.md  IMPLEMENTATION_GUIDE_SUPERSCALAR.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  Makefile  NEXT_DEVELOPMENT_PHASE.md  NEXT_PHASE_EXECUTIVE_SUMMARY.md  NEXT_PHASE_IMPLEMENTATION.md  NEXT_PHASE_IMPLEMENTATION_COMPLETE.md  NEXT_STEPS.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  PHASE5_COMPLETION_REPORT.md  PHASE7_COMPLETION_REPORT.md  PHASE_SUMMARY.md  PLAN.md  QUICKREF.md  RANDOMX_IMPLEMENTATION_ISSUES.md  README.md  SUPERSCALAR_IMPLEMENTATION_REQUIRED.md  SUPERSCALAR_IMPLEMENTATION_STATUS.md  SYSTEMATIC_DEBUGGING_PLAN.md  TASK_COMPLETION_REPORT.md  TESTVECTOR_IMPLEMENTATION.md  VALIDATION_BUG_REPORT.md  VALIDATION_FINAL_REPORT.md  VALIDATION_FINAL_SUMMARY.md  VALIDATION_REPORT_FINAL.md  (+37 more)
.github/: copilot-instructions.md
examples/mining/: main.go
examples/simple/: main.go
internal/: aes.go  argon2.go  blake2b.go
internal/argon2d/: argon2d.go  argon2d_test.go  blake2b_long.go  blake2b_long_test.go  block.go  block_test.go  check_salt_test.go  compare_h0_test.go  compression.go  compression_test.go  (+15 more)
testdata/: randomx_vectors.json  reference_trace_template.json
tools/cpp_trace_extractor/: CMakeLists.txt  README.md  extract_trace.cpp
